# brain_uav

./: .gitignore  README.md  pyproject.toml
docs/: implementation_notes.md
src/brain_uav/: __init__.py  config.py  curriculum.py  scenarios.py
src/brain_uav/baselines/: __init__.py  apf.py  astar.py  common.py  heuristic.py
src/brain_uav/envs/: __init__.py  static_no_fly_env.py  static_no_fly_env_runtime.py
src/brain_uav/models/: __init__.py  ann.py  snn.py
src/brain_uav/scripts/: __init__.py  common.py  evaluate.py  export_fixed_scenarios.py  generate_dataset.py  plot_results.py  profile_models.py  run_full_experiment.py  train_bc.py  train_td3.py
src/brain_uav/trainers/: __init__.py  bc.py  replay_buffer.py  td3.py
src/brain_uav/utils/: __init__.py  gym_compat.py  io.py  seeding.py
src/brain_uav_planning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_baselines.py  test_env.py
tmp_results/step_snapshots/: step_01_s010000_ep00001_goal.json
