[project]
name = "brain-uav-planning"
version = "0.1.0"
description = "Static no-fly-zone online trajectory planning with SNN-RL on a Gymnasium-style Python platform."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
  "matplotlib>=3.8",
  "networkx>=3.2",
  "thop>=0.1.1",
]

[project.optional-dependencies]
full = [
  "gymnasium>=0.29",
  "spikingjelly>=0.0.0.0.14",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

